# tt-forge

./: .gitignore  .pre-commit-config.yaml  .version  BOUNTY_TERMS.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  RELEASE.md  pyproject.toml  test.json
.devcontainer/: devcontainer.json
.github/: CODEOWNERS  test-install-wheel.yml  (+7 more)
.github/scripts/: build-docker.sh  check_release.sh  generate-issue-list.sh  generate-issue-url.sh  get_description_field_from_wheel.py  get_version.sh  git_facts.sh  install_wheels.sh  prune-nightly-releases.sh  pyproject.toml  template-setup.py  wait-on-gh-release-wheels.sh  wait-on-tt-pypi-wheels.sh  wheel-version-updater.sh
.github/scripts/bulk_update_issues/: bulk_update_issues.py
.github/scripts/enable-disable-workflows/: disable-workflows.sh  enable-workflows.sh
.github/scripts/model-compatible-table/: local_run.py  main.py  requirements.txt  test_main.py
.github/scripts/model-compatible-table/tests/tt-forge-fe/n150/: report_39667514308.xml  report_39667514677.xml  report_39667514854.xml  report_39667515326.xml  report_39675905221.xml  report_39676807644.xml
.github/scripts/model-compatible-table/tests/tt-forge-fe/test-reports-n150-1-40362870638/: report_40362870638.xml
.github/scripts/model-compatible-table/tests/tt-forge-fe/test-reports-n150-1-40362871602/: report_40362871602.xml
.github/scripts/model-compatible-table/tests/tt-forge-fe/test-reports-n150-1-40364883006/: report_40364883006.xml
.github/scripts/model-compatible-table/tests/tt-forge-fe/test-reports-n150-10-40362877017/: report_40362877017.xml
.github/scripts/model-compatible-table/tests/tt-xla/: report_39758387469.xml
.github/scripts/tt-forge-fe/: setup.py
.github/scripts/wheel-stub-tests/: pyproject.toml  test-wheel-stub.sh
(+527 files in other folders)
